--- a/src/SeeingSharp/SeeingSharp.csproj
+++ b/src/SeeingSharp/SeeingSharp.csproj
@@ -39,8 +39,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DontShowInDebug.cs" />
+    <Compile Include="ExtraLengthOnTheArm.cs" />
+    <Compile Include="IAmImmutable.cs" />
+    <Compile Include="IndexingIsEasy.cs" />
+    <Compile Include="ItIsTimeForFun.cs" />
+    <Compile Include="ItsADefaultThing.cs" />
+    <Compile Include="Numbers.cs" />
+    <Compile Include="Options.cs" />
+    <Compile Include="PathIdeas.cs" />
+    <Compile Include="ReallyStupidIdea.cs" />
+    <Compile Include="RestrictedAttribute.cs" />
+    <Compile Include="Scopey.cs" />
+    <Compile Include="ShowInDebug.cs" />
+    <Compile Include="WeCantDoThisAnymore.cs" />
     <Compile Include="WeYield.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WhatIsIt.cs" />
+    <Compile Include="WhereIsItGeneric.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
