Easier said than done

--- a/src/SeeingSharp/SeeingSharp.csproj
+++ b/src/SeeingSharp/SeeingSharp.csproj
@@ -43,15 +43,18 @@
     <Compile Include="Easy\ExtraLengthOnTheArm.cs" />
     <Compile Include="Easy\IAmImmutable.cs" />
     <Compile Include="Easy\IndexingIsEasy.cs" />
+    <Compile Include="Easy\ItIsGenericNoMatterWhat.cs" />
     <Compile Include="Easy\ItIsTimeForFun.cs" />
     <Compile Include="Easy\ItsADefaultThing.cs" />
     <Compile Include="Easy\Numbers.cs" />
     <Compile Include="Easy\Options.cs" />
+    <Compile Include="Easy\OrdnungMustSein.cs" />
     <Compile Include="Easy\PathIdeas.cs" />
     <Compile Include="Easy\ReallyStupidIdea.cs" />
     <Compile Include="Easy\RestrictedAttribute.cs" />
     <Compile Include="Easy\Scopey.cs" />
     <Compile Include="Easy\ShowInDebug.cs" />
+    <Compile Include="Easy\TouchingPrivates.cs" />
     <Compile Include="Easy\WeCantDoThisAnymore.cs" />
     <Compile Include="Easy\WeYield.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
