--- a/src/SeeingSharp/SeeingSharp.csproj
+++ b/src/SeeingSharp/SeeingSharp.csproj
@@ -39,29 +39,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Easy\DontShowInDebug.cs" />
-    <Compile Include="Easy\ExtraLengthOnTheArm.cs" />
-    <Compile Include="Easy\IAmImmutable.cs" />
-    <Compile Include="Easy\IndexingIsEasy.cs" />
-    <Compile Include="Easy\ItIsGenericNoMatterWhat.cs" />
-    <Compile Include="Easy\ItIsTimeForFun.cs" />
-    <Compile Include="Easy\ItsADefaultThing.cs" />
-    <Compile Include="Easy\Numbers.cs" />
-    <Compile Include="Easy\Options.cs" />
-    <Compile Include="Easy\OrdnungMustSein.cs" />
-    <Compile Include="Easy\PathIdeas.cs" />
-    <Compile Include="Easy\ReallyStupidIdea.cs" />
-    <Compile Include="Easy\RestrictedAttribute.cs" />
-    <Compile Include="Easy\Scopey.cs" />
-    <Compile Include="Easy\ShowInDebug.cs" />
-    <Compile Include="Easy\TouchingPrivates.cs" />
-    <Compile Include="Easy\WeCantDoThisAnymore.cs" />
-    <Compile Include="Easy\WeYield.cs" />
+    <Compile Include="00 Easy\DontShowInDebug.cs" />
+    <Compile Include="00 Easy\ExtraLengthOnTheArm.cs" />
+    <Compile Include="00 Easy\IAmImmutable.cs" />
+    <Compile Include="00 Easy\IndexingIsEasy.cs" />
+    <Compile Include="00 Easy\ItIsGenericNoMatterWhat.cs" />
+    <Compile Include="00 Easy\ItIsTimeForFun.cs" />
+    <Compile Include="00 Easy\ItsADefaultThing.cs" />
+    <Compile Include="00 Easy\Numbers.cs" />
+    <Compile Include="00 Easy\Options.cs" />
+    <Compile Include="00 Easy\OrdnungMustSein.cs" />
+    <Compile Include="00 Easy\PathIdeas.cs" />
+    <Compile Include="00 Easy\ReallyStupidIdea.cs" />
+    <Compile Include="00 Easy\RestrictedAttribute.cs" />
+    <Compile Include="00 Easy\Scopey.cs" />
+    <Compile Include="00 Easy\ShowInDebug.cs" />
+    <Compile Include="00 Easy\TouchingPrivates.cs" />
+    <Compile Include="00 Easy\WeCantDoThisAnymore.cs" />
+    <Compile Include="00 Easy\WeYield.cs" />
+    <Compile Include="01 Medium\DoesItMatter.cs" />
+    <Compile Include="01 Medium\MagicCanHappen.cs" />
+    <Compile Include="01 Medium\OperatorPatchMeThrough.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Easy\WhatIsIt.cs" />
-    <Compile Include="Easy\WhereIsItGeneric.cs" />
+    <Compile Include="00 Easy\WhatIsIt.cs" />
+    <Compile Include="00 Easy\WhereIsItGeneric.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="02 High\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
