--- a/src/SeeingSharp/SeeingSharp.csproj
+++ b/src/SeeingSharp/SeeingSharp.csproj
@@ -60,6 +60,7 @@
     <Compile Include="01 Medium\DoesItMatter.cs" />
     <Compile Include="01 Medium\MagicCanHappen.cs" />
     <Compile Include="01 Medium\OperatorPatchMeThrough.cs" />
+    <Compile Include="01 Medium\WhereDoWeGoto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="00 Easy\WhatIsIt.cs" />
     <Compile Include="00 Easy\WhereIsItGeneric.cs" />
