--- a/src/SeeingSharp.Tests/SeeingSharp.Tests.csproj
+++ b/src/SeeingSharp.Tests/SeeingSharp.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7080426D-69B3-4905-B38E-550EC97B1AAA}</ProjectGuid>
+    <ProjectGuid>{2BD565C3-6C67-41A3-9770-620E8AD61163}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SeeingSharp</RootNamespace>
-    <AssemblyName>SeeingSharp</AssemblyName>
+    <RootNamespace>SeeingSharp.Tests</RootNamespace>
+    <AssemblyName>SeeingSharp.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -37,39 +37,43 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="xunit">
+      <HintPath>..\packages\xunit.1.9.2\lib\net20\xunit.dll</HintPath>
+    </Reference>
+    <Reference Include="xunit.extensions">
+      <HintPath>..\packages\xunit.extensions.1.9.2\lib\net20\xunit.extensions.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="00 Easy\DontShowInDebug.cs" />
-    <Compile Include="00 Easy\ExtraLengthOnTheArm.cs" />
-    <Compile Include="00 Easy\IAmImmutable.cs" />
-    <Compile Include="00 Easy\IndexingIsEasy.cs" />
-    <Compile Include="00 Easy\ItIsGenericNoMatterWhat.cs" />
-    <Compile Include="00 Easy\ItIsTimeForFun.cs" />
-    <Compile Include="00 Easy\ItsADefaultThing.cs" />
-    <Compile Include="00 Easy\_Numbers.cs" />
-    <Compile Include="00 Easy\_Options.cs" />
-    <Compile Include="00 Easy\OrdnungMustSein.cs" />
-    <Compile Include="00 Easy\PathIdeas.cs" />
-    <Compile Include="00 Easy\ReallyStupidIdea.cs" />
-    <Compile Include="00 Easy\RestrictedAttribute.cs" />
-    <Compile Include="00 Easy\Scopey.cs" />
-    <Compile Include="00 Easy\ShowInDebug.cs" />
-    <Compile Include="00 Easy\TouchingPrivates.cs" />
-    <Compile Include="00 Easy\WeCantDoThisAnymore.cs" />
-    <Compile Include="00 Easy\WeYield.cs" />
-    <Compile Include="01 Medium\CheckItOut.cs" />
-    <Compile Include="01 Medium\DoesItMatter.cs" />
-    <Compile Include="01 Medium\MagicCanHappen.cs" />
-    <Compile Include="01 Medium\OperatorPatchMeThrough.cs" />
-    <Compile Include="01 Medium\WhereDoWeGoto.cs" />
-    <Compile Include="01 Medium\WhosCalling.cs" />
-    <Compile Include="02 High\IsThisAUnion.cs" />
-    <Compile Include="02 High\LineDancer.cs" />
+    <Compile Include="00 Easy\DontShowInDebugTests.cs" />
+    <Compile Include="00 Easy\ExtraLengthOnTheArmTests.cs" />
+    <Compile Include="00 Easy\IAmImmutableTests.cs" />
+    <Compile Include="00 Easy\IndexingIsEasyTests.cs" />
+    <Compile Include="00 Easy\ItIsGenericNoMatterWhatTests.cs" />
+    <Compile Include="00 Easy\ItIsTimeForFunTests.cs" />
+    <Compile Include="00 Easy\ItsADefaultThingTests.cs" />
+    <Compile Include="00 Easy\OrdnungMustSeinTests.cs" />
+    <Compile Include="00 Easy\PathIdeasTests.cs" />
+    <Compile Include="00 Easy\ReallyStupidIdeaTests.cs" />
+    <Compile Include="00 Easy\RestrictedAttributeTests.cs" />
+    <Compile Include="00 Easy\ScopeyTests.cs" />
+    <Compile Include="00 Easy\ShowInDebugTests.cs" />
+    <Compile Include="00 Easy\TouchingPrivatesTests.cs" />
+    <Compile Include="00 Easy\WeCantDoThisAnymoreTests.cs" />
+    <Compile Include="00 Easy\WeYieldTests.cs" />
+    <Compile Include="00 Easy\WhatIsItTests.cs" />
+    <Compile Include="00 Easy\WhereIsItGenericTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="00 Easy\WhatIsIt.cs" />
-    <Compile Include="00 Easy\WhereIsItGeneric.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SeeingSharp\SeeingSharp.csproj">
+      <Project>{7080426D-69B3-4905-B38E-550EC97B1AAA}</Project>
+      <Name>SeeingSharp</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
