--- a/src/SeeingSharp/SeeingSharp.csproj
+++ b/src/SeeingSharp/SeeingSharp.csproj
@@ -58,13 +58,13 @@
     <Compile Include="00 Easy\WeCantDoThisAnymore.cs" />
     <Compile Include="00 Easy\WeYield.cs" />
     <Compile Include="01 Medium\CheckItOut.cs" />
-    <Compile Include="01 Medium\DoesItMatter.cs" />
+    <Compile Include="01 Medium\_DoesItMatter.cs" />
     <Compile Include="01 Medium\MagicCanHappen.cs" />
     <Compile Include="01 Medium\OperatorPatchMeThrough.cs" />
     <Compile Include="01 Medium\WhereDoWeGoto.cs" />
     <Compile Include="01 Medium\WhosCalling.cs" />
     <Compile Include="02 High\IsThisAUnion.cs" />
-    <Compile Include="02 High\LineDancer.cs" />
+    <Compile Include="02 High\_LineDancer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="00 Easy\WhatIsIt.cs" />
     <Compile Include="00 Easy\WhereIsItGeneric.cs" />
